[project]
name = "hw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyproj>=3.7.2",
    "xlrd>=2.0.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pybind11>=3.0.1",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]
